# catboy-maid

./: Cargo.toml  Dockerfile  README.md  pyproject.toml
catboy_maid/: cli.py  context.py  deco.py  main.py
catboy_maid/cxn/: __init__.py  discord.py  discord_client.py
catboy_maid/db/: __init__.py  base.py  discord_db.py
catboy_maid/pipeline/: __init__.py  discord.py  discord_pipe.py
migrations/: 20230627030708_journal.sql
src/: main.rs
src/handle/: mod.rs
src/model/: event.rs  journal.rs  mod.rs
src/platform/: discord.rs
