[package]
name = "catboy-maid"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
bincode = "1.3.3"
chrono = "0.4.26"
dotenvy = "0.15.7"
futures = "0.3.28"
serde = { version = "1.0.164", features = ["derive"] }
sqlx = { version = "0.6.3", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "chrono", "macros", "migrate"] }
tokio = { version = "1.28.2", features = ["full"] }
tracing = { version = "0.1.37", features = ["attributes"] }
tracing-subscriber = "0.3.17"
twilight-gateway = "0.15.2"
twilight-http = "0.15.2"
twilight-model = "0.15.2"
